--- a/app/index.html
+++ b/app/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 hello, electron
+
+<div>
+  status:
+  <span id="status"></span>
+</div>
+<script src="./renderer.js"></script>
 </body>
 </html>
